# garmingolf-connector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-14-garmingolf-rust-cli.md
docs/superpowers/specs/: 2026-06-14-garmingolf-rust-cli-design.md
src/: api.rs  config.rs  core.rs  lib.rs  nova.rs
src/garmin/: protocol.rs  runtime.rs
src/gspro/: mod.rs  payload.rs  runtime.rs
tests/: api_contract.rs  config_contract.rs  core_contract.rs  garmin_protocol_contract.rs  garmin_runtime_contract.rs  gspro_payload_contract.rs  nova_ws_contract.rs
