[package]
name = "garmingolf-connector"
version = "0.1.0"
description = "Rust CLI/library Garmin Golf launch monitor bridge"
edition = "2021"
rust-version = "1.77"
license = "MIT"
default-run = "garmingolf-connector"

[lib]
name = "garmingolf_connector"
path = "src/lib.rs"

[[bin]]
name = "garmingolf-connector"
path = "src/bin/garmingolf-connector.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
